apps/ckangpt/templates/chroma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chroma
spec:
  ingressClassName: nginx
  rules:
    - host: "ckangpt-chroma.~iac:uumpa_root_domain~"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chroma
                port:
                  number: 8000
